<resources>
    <string name="app_name">Calorie Hunter</string>
    <string name="check_your_data">Check your data</string>
    <string name="select_correct_data">Select correct data</string>
    <string name="select_your_option">Select your option</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="date_hint">01 Feb 2020</string>
    <string name="cloudy">Cloudy</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="evening_snacks">Evening Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="health_tips">Health Tips</string>
    <string name="nutrition_tips">Nutrition Tips</string>
    <string name="calculate_calorie">Calculate Calorie</string>
    <string name="developed_by">Developed By</string>
    <string name="sakhawat_hossain">Sakhawat Hossain</string>
    <string name="food_items">Food Items</string>
    <string name="team_travers">Team Travers</string>
    <string name="health_quotes">\"Attention to health is life\'s greatest hindrance.\"</string>
    <string name="sleeping_tips">Sleeping Tips</string>
    <string name="hint_time_text">Its 11:00 PM</string>
    <string name="time_to_sleep_early">Time to sleep early</string>
    <string name="breakfast_items">Breakfast Items</string>
    <string name="lunch_items">Lunch Items</string>
    <string name="snacks_items">Snacks items</string>
    <string name="dinner_items">Dinner Items</string>
    <string name="view_all">View all</string>
    <string name="coffee">Coffee</string>
    <string name="biryani">Biryani</string>
    <string name="description">Description</string>
    <string name="short_dummy_description">This is a short dummy description which will be used by any components which need a simple and short description.</string>
    <string name="calorie_sample_hint">420</string>
    <string name="kcal">Kcal</string>
    <string name="zero">0</string>
    <string name="total_items">Total items</string>
    <string name="egg">Egg</string>
    <string name="amount_of_calorie">Amount of calorie</string>
    <string name="amount_of_fat">Amount of fat</string>
    <string name="amount_of_fiber">Amount of fiber</string>
    <string name="amount_of_protein">Amount of protein</string>
    <string name="food_details_with_gram">Food details in Amount of 100 grams</string>
    <string name="amount_of_sodium">Amount of sodium</string>
    <string name="amount_of_sugar">Amount of sugar</string>
    <string name="amount_of_cholesterol">Amount of cholesterol</string>
    <string name="amount_of_carbs">Amount of carbs</string>
    <string name="dummy_full_description">Carbohydrates, often referred to as just “carbs,” are your body\'s primary energy source, and are a crucial part of any well-balanced diet. The three main types of carbohydrates are sugars, starches, and fiber.</string>
    <string name="amount_of_magnesium">Amount of magnesium</string>
    <string name="your_result">Your Result</string>
    <string name="result_list">All Result List</string>
    <string name="health_tips_list">Health Tips List</string>
    <string name="meal_plan_list">Meal Plan List</string>
    <string name="nutrition_tips_list">Nutrition Tips List</string>
    <string name="total_calculated_items">Total calculated items</string>
    <string name="last_calculation_date">Last calculation date</string>
    <string name="result">Result</string>
    <string name="calorie_result_sample">1800 Kcal</string>
    <string name="activity_level">Activity Level</string>
    <string name="activity_level_sample">Middle</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height_in_cm">Height in CM</string>
    <string name="weight_in_kg">Weight in Kg</string>
    <string name="i_am">I am</string>
    <string name="weight">Weight</string>
    <string name="age_is">Age is</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="my_activity_level">My activity level</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="very_high">Very High</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="fourth">4th</string>
    <string name="calculate">Calculate</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="using_miffin_st_jeor_rule">Using Muffin-St Jeor Rule</string>
    <string name="total_calories_including_exercise">Total Calories Including Exercise</string>
    <string name="maintenance">Maintenance</string>
    <string name="fat_loss">Fat Loss</string>
    <string name="extreme_fat_loss">Extreme Fat Loss</string>
    <string name="now_what">Now what?</string>
    <string name="one_dot">1.</string>
    <string name="two_dot">2.</string>
    <string name="three_dot">3.</string>
    <string name="four_dot">4.</string>
    <string name="five_dot">5.</string>
    <string name="good_health_good_life">Good Health , Good Life</string>
    <string name="read_more">Read More</string>
    <string name="slash">/</string>
    <string name="all_items">All Items</string>
    <string name="long_description">The property animation system is a robust framework that allows you to animate almost anything.
        You can define an animation to change any object property over time, regardless of whether it draws to the screen or not.
        You can also specify whether you want the animation to play back in reverse.</string>
    <string name="icon_click_listen">Click the icon to listen</string>
    <string name="details_tips">Details Tips</string>
    <string name="tap_again_to_stop">Tap the icon again to stop speech.</string>
    <string name="saturday">Saturday</string>
    <string name="meal_plan_list_heading">Be REady, Plan To Eat</string>
    <string name="foods">Foods</string>
    <string name="detailed_description">Here is the detailed description</string>
    <string name="meal_plan_details_heading">Your Plans, Your Habits and Your Life</string>
    <string name="foods_moto_for_tour_page">Various types of foods and their details.</string>
    <string name="calculate_calorie_moto_for_tour_page">You can calculate the calories you need based on foods.</string>
    <string name="for_breakfast">For Breakfast</string>
    <string name="for_lunch">For Lunch</string>
    <string name="for_dinner">For Dinner</string>
    <string name="health_tips_moto_for_tour_page">Get various kinds of health tips</string>
    <string name="meal_plan_moto_for_tour_page">Provided a list of meal plan to choose</string>
    <string name="hello_there">Hello There</string>
    <string name="time_to_sleep">Between 8 p.m. and midnight</string>
    <string name="bed_time">Bed time</string>
    <string name="get_up_time">Get up time</string>
    <string name="get_up_time_from_bed">After a sound sleep</string>
    <string name="sleep_at_least">Sleep at least</string>
    <string name="sleep_quotes">“Tomorrow is going to be the best day ever!”</string>
    <string name="sleep_requirements_by_age">"Sleep requirements by age "</string>
    <string name="age">Age</string>
    <string name="hours_of_sleep">Hours of sleep</string>
    <string name="note_information_proved_by_national_sleep_foundation">Note [All of these information provided by National Sleep Foumcation]</string>
    <string name="your_sleep_assistant">Your sleep assistant</string>
    <string name="nutrition_tips_moto">One must eat to live, not to eat.</string>
    <string name="total_tips">Total tips</string>
    <string name="total">Total</string>
    <string name="twenty">20</string>
    <string name="tips_to_improve_your_nutrition">Tips to Improve Nutrition</string>
    <string name="portion_control">Body Portion Control</string>
    <string name="listen_to_your_body">Listen to Your Body</string>
    <string name="more_and_more_fiber">More and More Fiber</string>
    <string name="general_tips">General Nutrition Tips</string>
    <string name="no_data_found">Not Data Found</string>
    <string name="blank" />
</resources>
