<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:translationZ="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/insideLayout"
        android:layout_width="176dp"
        android:layout_height="308dp"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/health_tips_list_back">

        <TextView
            android:id="@+id/CollectionDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/date_hint"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/ShortDescription"
            android:layout_below="@id/CollectionDate"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/short_dummy_description"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold"
            android:maxLines="3"
            android:ellipsize="end"
            android:textSize="16sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/CurrentItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="4dp"
                    android:text="@string/one"
                    android:textColor="@color/md_white_1000"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="4dp"
                    android:text="@string/slash"
                    android:textColor="@color/md_white_1000"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/TotalCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="4dp"
                    android:text="@string/four"
                    android:textColor="@color/md_white_1000"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="16sp"/>

            </LinearLayout>

            <TextView
                android:visibility="visible"
                android:id="@+id/ReadMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/ReadMoreImgView"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/read_more"
                android:textColor="@color/md_white_1000"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="16sp"/>

            <ImageView
                android:visibility="visible"
                android:id="@+id/ReadMoreImgView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:tint="@color/md_white_1000"
                android:src="@drawable/ic_right_arrow_green"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:padding="4dp"/>

        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>