<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:translationZ="3dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/md_white_1000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:gravity="center"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="4dp"
                android:translationZ="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rectangle_background_filled"
                android:gravity="center">

                <TextView
                    android:id="@+id/Counter"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/one"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/md_green_900"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_weight="5.4"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/DayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingLeft="4dp"
                    android:scrollHorizontally="true"
                    android:text="@string/saturday"
                    android:textColor="@color/md_green_900"
                    android:textStyle="bold"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/FoodItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/short_dummy_description"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/md_deep_orange_600"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AmountOfCalorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/md_green_900"
                android:text="@string/calorie_sample_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/md_blue_grey_600"
                android:text="@string/kcal"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>