<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context=".activities.fooditems.FoodListActivity">

    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:elevation="8dp"
            android:orientation="vertical"
            android:background="@drawable/a_roundbg"
            android:translationZ="4dp">

            <ImageView
                android:id="@+id/BackButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_left_arrow"
                android:padding="8dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/health_tips"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/md_green_900"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_below="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/listenHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_click_listen"
                    android:textColor="@color/md_green_800"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:visibility="visible"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingRight="4dp"
                    android:textSize="14sp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/listenIcon"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="8dp"
                    android:tint="@color/md_green_600"
                    android:src="@drawable/ic_record_voice_over"
                    app:backgroundTint="@color/white_transparent"
                    app:fabSize="mini" />

            </RelativeLayout>

            <TextView
                android:id="@+id/CollectionDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_hint"
                android:textColor="@color/md_green_900"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

            <TextView
                android:id="@+id/ShortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/short_dummy_description"
                android:textColor="@color/md_green_900"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

            <TextView
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_description"
                android:textColor="@color/md_green_900"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/allHealthTipsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/adapter_recycler_health_tips_details_list"
                    app:spanCount="1"
                    android:orientation="vertical"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
